    - enabled install_ocamlbuild patch (was disabled by mistake) and patched
      it fixing a wrong path
  * debian/rules
    - pass -libdir to configure (now that it is supported upstream) in
      addition to sed-ing generated config Makefiles; otherwise ocamlrun won't
      get the correct libdir setting
  * debian/ocaml-md5sums/ocaml-md5sums.1
    - written ocaml-md5sums manpage

 -- Stefano Zacchiroli <zack@debian.org>  Sat, 16 Jun 2007 16:03:48 +0000

ocaml (3.10.0-2) experimental; urgency=low

  * Split two new packages: "camlp4" and "camlp4-extra" to cope with the huge
    size increase of the new camlp4
  * Policy
    - update the Vcs-Svn info to the latest PTS documentation
    - describe dependencies from a -dev package to its companion shared stub
      package (if any) and suggest the usage of ${binary:Version}
  * debian/copyright
    - added in place of copyright.in, nothing to replace there
  * debian/man/camlp4*.1
    - added manpages for camlp4 related executables; content partially using
      html2man, partially taken from the camlp4 wiki
  * debian/control
    - moved ledit recommends from ocaml-nox to ocaml-interp (which ships the
      interactive toplevel)
    - minor improvements to various descriptions

 -- Stefano Zacchiroli <zack@debian.org>  Sat, 16 Jun 2007 12:41:32 +0100

ocaml (3.10.0-1) experimental; urgency=low

  [ Stefano Zacchiroli ]
  * New upstream (stable) release
  * debian/patches/*
    - removed: ocaml-interp_manpage, build_wo_debug_info (integrated upstream)
    - updated: install_ocamlbuild
  * ship ocaml-compiler-libs objects as STDLIB/ocaml-compiler-libs/{parsing/,
    typing/, utils/} rather than as a flat dir tree
  * re-enabled ocaml-source package (which ships
    /usr/src/ocaml-3.10.0.tar.bz2), now with a better way to generate it:
    everything in the build dir except debian/ will be copied in the resulting
    tarball
  * debian/ocaml-source.exclude